<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgk"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="700dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_logo"
       android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearSearchName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/search_edittext_back"
        android:orientation="horizontal"
       >


        <EditText
            android:id="@+id/edtSearchName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/please_enter_a_character_name"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/transparentLightBlueColor" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imgSearch"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/search"
            android:padding="12dp"
            android:src="@drawable/ic_search" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
      />
</LinearLayout>